; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_random.c_uv__random.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_random.c_uv__random.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UV_ENOSYS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @uv__random to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uv__random(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @uv__random_getrandom(i8* %6, i64 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @UV_ENOSYS, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i8*, i8** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @uv__random_devurandom(i8* %13, i64 %14)
  store i32 %15, i32* %5, align 4
  br label %16

16:                                               ; preds = %12, %2
  %17 = load i32, i32* %5, align 4
  switch i32 %17, label %22 [
    i32 134, label %18
    i32 133, label %18
    i32 132, label %18
    i32 131, label %18
    i32 130, label %18
    i32 129, label %18
    i32 128, label %18
  ]

18:                                               ; preds = %16, %16, %16, %16, %16, %16, %16
  %19 = load i8*, i8** %3, align 8
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @uv__random_sysctl(i8* %19, i64 %20)
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %16, %18
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @uv__random_getrandom(i8*, i64) #1

declare dso_local i32 @uv__random_devurandom(i8*, i64) #1

declare dso_local i32 @uv__random_sysctl(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
